@@ -3,6 +3,8 @@
   - rename new_hash to hash
   - add contains function
   - add index function
+  - add memcpy function
+  - add memmove function
 0.0427 2018-04-17
   - add getenv function
   - add SPVM::Errno module
